<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Investment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button_label">登录</string>
    <string name="login_signup_label">注册新用户</string>
    <string name="title_activity_sign_up">注册新用户</string>
    <string name="signup_username_hint">用户名</string>
    <string name="signup_password_hint">密码</string>
    <string name="signup_button_label">注册</string>
    <string name="signup_errordialog_title">Oops!</string>
    <string name="signup_emptydialog_message">用户名和密码不能为空</string>
    <string name="signup_lessdiaglog_message">用户名字符数不能小于6</string>
    <string name="signup_lesspassworddiaglog_message">密码字符数不能小于6</string>
    <string name="login_emptydialog_message">用户名和密码不能为空</string>
    <string name="login_errordialog_title">Oops!</string>
    <string name="menu_logout_label">退出登录</string>
    <string name="generalviewfragment_label">我的收益</string>
    <string name="myinvestmentfragment_label">我的投资</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="Menu_titles">
        <item android:id="@+id/menu_myinvestment" android:layout_width="wrap_content" android:layout_height="wrap_content">我的投资</item>
        <item android:id="@+id/menu_allinvestment" android:layout_width="wrap_content" android:layout_height="wrap_content">所有投资</item>
        <item android:id="@+id/menu_knowledge" android:layout_width="wrap_content" android:layout_height="wrap_content">金融知识</item>
    </string-array>

    <string name="title_activity_all_main">所有产品</string>
    <string name="title_activity_knowledge">金融知识</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ic_action_new">Add new</string>
    <string name="title_activity_add_item_popup">Add Item</string>
    
    <string name="productOne_label">银行存款</string>
    <string name="productTwo_label">互联网理财</string>
     <string name="productThree_label">product3</string>
      <string name="productFour_label">product4</string>
      
          <string-array name="product_label">
        <item android:id="@+id/product_bank" android:layout_width="wrap_content" android:layout_height="wrap_content">银行存款</item>
        <item android:id="@+id/product_2" android:layout_width="wrap_content" android:layout_height="wrap_content">互联网理财</item>
        <item android:id="@+id/product_3" android:layout_width="wrap_content" android:layout_height="wrap_content">product2</item>
        <item android:id="@+id/product_4" android:layout_width="wrap_content" android:layout_height="wrap_content">product3</item>
    </string-array>
        <string name="product_bankname_hint">bank name</string>
        <string name="product_yiled_hint">annual yield</string>
        <string-array name="product1_duration">
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">活期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">三个月定期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">六个月定期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">一年定期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">两年定期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">三年定期存款</item>
            <item android:layout_width="wrap_content" android:id="@+id/current_deposite" android:layout_height="wrap_content">五年定期存款</item>
        </string-array>
            <string name="product1_amount">amount</string>
            <string name="product1_calculate_button">CALCULATE</string>
            <string name="percent_sign">%</string>
            <string name="rmb_sign">RMB</string>
            <string name="save_icon">save</string>
    

</resources>
