<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="parseRelate.LoginActivity" >

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:text="@string/login_button_label" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_alignLeft="@+id/login_username"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_username_hint"
        android:singleLine="true" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/login_signup_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
